Auto-commit updates